fix button color in dark mode - 2

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -231,8 +231,8 @@ body.dark-mode {
   }
 
   .btn-primary {
-    background-color: #58a6ff;
-    border-color: #58a6ff;
+    background-color: #deebf3;
+    border-color: #cedbf3;
   }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background-color: #80bfff !important;
